Minor Fix: About-Profile-Picture off-center

--- a/data/media-queries.css
+++ b/data/media-queries.css
@@ -602,7 +602,7 @@
     }
     
     #about-profile-details{
-        margin-left: 30px;
+        margin-left: 0px;
     }
     
     #about-profile-picture{
